# recolor_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  date.txt  date2.txt  date2_akasparian.txt  date_akasparian.txt  game  game.c  game.h  game_io.c  game_io.h  helper.sh  recolor_solve.c  recolor_text.c  solver.c  solver.h  solver_fakhoun.c  test_game_akasparian.c  test_game_fakhoun.c  test_game_mpitassi.c  test_game_mrousseau006.c  todo.txt
Android/: AndroidManifest.xml  build.xml  cleanall.sh
Android/assets/: default_game.rec  horizontal_game2N.rec  horizontal_game2S.rec
Android/jni/src/: Android.mk  asde_slist.c  asde_slist.h  asde_slist_utilitary_functions.c  asde_slist_utilitary_functions.h  game.c  game.h  game_io.c  game_io.h  game_rand.c  game_rand.h  gui.c  gui.h  main.c  solver.c  solver.h  toolbox.c  toolbox.h
ListLib/: asde_slist.c  asde_slist.h  asde_slist_utilitary_functions.c  asde_slist_utilitary_functions.h
V1/: game.c  game.h  recolor_text.c
V2/: .gitignore  CMakeLists.txt  game.c  game.h  game_io.c  helper.sh  recolor_text.c  test_game_akasparian.c  test_game_fakhoun.c  test_game_mpitassi.c  test_game_mrousseau006.c  todo.txt
data/: test_col.rec  test_game_0.rec  test_game_1sol.rec  test_game_24sol.rec
include/: asde_slist.h  asde_slist_utilitary_functions.h  game_rand.h  gui.h  solver.h  toolbox.h
src/: asde_slist_utilitary_functions.c  game.c  game_io.c  game_rand.c  gui.c  recolor_sdl.c  recolor_solve.c  recolor_text.c  solver.c  toolbox.c
tests/: test_game_fakhoun.c  test_game_mpitassi.c  test_game_mrousseau006.c
